More debugging, fixed services images and tesimonials images not showing up (hopefully)

--- a/src/App.css
+++ b/src/App.css
@@ -327,6 +327,12 @@ a {
   line-height: var(--t-short);
   margin-top: 10px;
 }
+.service-img {
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
 .service-description {
   line-height: var(--t-tall);
 }
@@ -340,7 +346,8 @@ a {
   cursor: pointer;
   fill: var(--brzkr-gray_2);
 }
-
+/* This is for the images to be displayed correctly on github pages,
+the url must be set through css */
 /* ----- */
 /* Newsletter Section */
 .section--newsletter {
@@ -417,6 +424,10 @@ a {
 .testimonial-img {
   min-width: 280px;
   min-height: 242px;
+  width: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .testimonial-quote {
   line-height: var(--t-tall);
@@ -574,6 +585,19 @@ a {
 }
 .copyright {
   text-align: center;
+}
+
+/* Footer wave */
+.section--footer {
+  width: 100%;
+}
+.footer-wave {
+  background-image: url(../assets/imgs/footer-wave.svg);
+  background-size: cover;
+  width: 100%;
+  aspect-ratio: 992/100;
+  background-repeat: no-repeat;
+  transform: translateY(3px);
 }
 
 @media screen and (max-width: 479.5px) {
@@ -1250,7 +1274,6 @@ a {
   /* ----- */
   /* Footer section */
   .footer-content {
-    transform: translateY(-1px);
     padding: 40px 10px;
   }
   .copyright > br {
@@ -1550,7 +1573,6 @@ a {
   /* ----- */
   /* Footer section */
   .footer-content {
-    transform: translateY(-1px);
     padding: 40px 20px;
   }
   .copyright > br {
@@ -1904,7 +1926,6 @@ a {
   /* ----- */
   /* Footer section */
   .footer-content {
-    transform: translateY(-2px);
     padding: 80px 40px;
   }
   .copyright > br {
@@ -2210,7 +2231,6 @@ a {
   /* ----- */
   /* Footer section */
   .footer-content {
-    transform: translateY(-1px);
     padding: 40px 10px;
   }
   .copyright > br {
@@ -2523,8 +2543,8 @@ a {
   /* ----- */
   /* Footer section */
   .footer-content {
-    transform: translateY(-1px);
     padding: 40px 10px;
+    font-size: var(--ts-2_21);
   }
   .copyright > br {
     display: none;
